2007-07-20  Sven Neumann  <sven@gimp.org>

	Applied another patch from Stefan Röllin:

	* plug-ins/print/print-page-layout.c: align buttons.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/text/gimptext.c (gimp_text_set_property): don't call strlen
	on a NULL font name.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: fixed a gtk-doc comment.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/menus/menus.c (menus_clear): overwrite the menurc with the
	systemwide default. Only if that fails, delete the menurc file.

	* app/dialogs/preferences-dialog.c: string change.

	* app/core/gimp-user-install.c: formatting.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpoffsetarea.c
	* plug-ins/print/print-preview.c: set a cursor to indicate that
	the area is interactive.

	* plug-ins/print/print-page-layout.c: minor dialog tweaks.

2007-07-20  Sven Neumann  <sven@gimp.org>

	Applied patch from Stefan Röllin attached to bug #387604:

	* plug-ins/print/print-draw-page.c: take offsets into account.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-quick-mask.[ch]: remember whether a channel
	was active before quick mask was activated. Fixes bug #134371.

2007-07-20  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/faxg3/faxg3.c (query): changed the magic string to
	"Research" starting at offset 4 (this also matches the longer
	string "PC Research, Inc" starting at offset 1).  Addresses a part
	of bug #445559.

2007-07-19  Sven Neumann  <sven@gimp.org>

	Applied patch from Stefan attached to bug #387604:

	* plug-ins/print/Makefile.am
	* plug-ins/print/print-preview.[ch]: new files implementing a
	print preview similar to GimpOffsetArea.

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.c: adds GUI to adjust the offsets.

2007-07-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: renamed gimp_image_active_drawable() to
	gimp_image_get_active_drawable().
